# zh-sentibert

./: .gitignore  LICENSE  README.md  README.zh-CN.md  config.py  inference.py  main_train.py  model.py  pyproject.toml  requirements.txt
examples/: sample_texts.txt
logs/: history_20251106_222829.json
results/: predictions_20251106_232440.json  predictions_20251106_233128.json  results_20251106_222833.json
scripts/: download_dataset.py  train.py
src/zh_sentibert/: __init__.py  config.py  data_utils.py  inference.py  trainer.py
