[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zh-sentibert"
version = "0.1.0"
description = "Chinese sentiment analysis with fine-tuned BERT (bert-base-chinese) on ChnSentiCorp."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "shangyi.zhu" }]
keywords = ["nlp", "sentiment-analysis", "bert", "chinese", "pytorch"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Natural Language :: Chinese (Simplified)",
]
dependencies = [
    "torch>=2.0",
    "transformers>=4.30",
    "datasets>=2.10",
    "scikit-learn>=1.2",
    "pandas>=1.5",
    "numpy>=1.23",
    "jieba>=0.42",
    "tqdm>=4.65",
    "matplotlib>=3.6",
    "seaborn>=0.12",
]

[project.optional-dependencies]
wandb = ["wandb>=0.15"]
dev = ["pytest>=7", "ruff>=0.4"]

[project.urls]
Repository = "https://github.com/Zsyyxrs/zh-sentibert"

[tool.setuptools.packages.find]
where = ["src"]

